--- a/03_CSS_advanced/homework/blogsiteclone/blogpost.html
+++ b/03_CSS_advanced/homework/blogsiteclone/blogpost.html
@@ -78,6 +78,8 @@
                 </div>
 
             </div>
+
+            <hr class="divider">
             <div class="second-half">
                 <div class="about">
                     <h3>About</h3>
