share modal done

--- a/06_Javascript_Advanced/unwrap classs/ShareModalApp/index.html
+++ b/06_Javascript_Advanced/unwrap classs/ShareModalApp/index.html
@@ -37,7 +37,7 @@
                     <div>View my Profiles</div>
                 </button>
 
-                <button class="btn-follow btn-card">Follow me</button>
+                <a href="https://www.linkedin.com/in/ankit0501/"><button class="btn-follow btn-card">Follow me</button></a>
             </div>
         </div>
     </div>
@@ -61,13 +61,13 @@
 
 
             <div class="icon-container">
-                <a href="#" class="icon" id="facebook">
-                    <i class="fa-brands fa-facebook-f"></i>
+                <a href="https://www.linkedin.com/in/ankit0501/" class="icon" id="facebook">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
-                <a href="#" class="icon" id="twitter">
+                <a href="https://x.com/Ankit0501" class="icon" id="twitter">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="#" class="icon" id="instagram">
+                <a href="https://www.instagram.com/ankitsingh5529/" class="icon" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="icon" id="whatsapp">
