weather app project completed and added some features like throwing error and changing background wrt temperature

--- a/06_Javascript_Advanced/Projects_javascript/WeatherAppProject/index.html
+++ b/06_Javascript_Advanced/Projects_javascript/WeatherAppProject/index.html
@@ -113,7 +113,7 @@
                  <!-- error container -->
                  <div class="sub-container error-container">
                   <img src="assets/not-found.png" alt="">
-                  <p data-errorMsg></p>
+                  <p class="errorMsg">City Not Found</p>
                  </div>
          </div>
 
